--- a/css/index.css
+++ b/css/index.css
@@ -1,45 +1,52 @@
 * {
   box-sizing: border-box;
+  margin : 0;
+  padding : 0;
 }
+
 header {
-  background-color: #dadada;
-  text-align: center;
-  position: fixed;
+  position: relative;
   width: 100%;
   height: 100px;
+}
+
+header .lnb {
+  height: 100px;
+  position: fixed;
   top:0;
-  z-index: 1000;  
+  left:0;
+  background-color: #dadada;
+  width : 100%;
+}
+
+header .lnb ul {
+  display: flex;
+  justify-content: center;
+  width : 100%;
+  height: 100px;
 }
 
 header .lnb li {
-  display: inline-block;
+  width : 250px;
+  text-align: center;
 }
 
 header .lnb li a {
-  padding: 40px 40px 40px 40px;
   height: 100px;
   color: #333;
   font-size: 25px;
   line-height: 100px;
-}
-
-header .lnb li a  {
+  font-weight: 400;
   position: relative;
-}
-
-header .lnb li:first-child {
-  font-weight: bold;
 }
 
 header .sns {
   position: absolute;
-  top: 25px;
-  right: 50px;
+  right : 0;
 }
 
-header .sns li {
-  display: inline-block;
-  position: relative;
+header .sns ul {
+  display: flex;
 }
 
 header .sns li a img {
@@ -56,38 +63,146 @@ header .mainimg {
   top: 0;
 }
 
+/* home */
 .win {
-  text-align: center;
+  width: 100%;
 }
 
-.win .hi {
-  line-height: 200px;
-  position: relative;
-  font-size: 45px;
-  font-weight: bold;
-  padding-top: 100px;
-}
-
-.win .info {
-  margin: 0 auto;
-  margin-top : 40px;
-  padding : 25px;
-  display:  flex;
-  justify-content: space-between;
+.win .main{
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  width: 50%;
-  background-color: tomato;
+  justify-content: center;
+  width :100%;
+  height : 100vh;
+  background-image: url('/images/main.jpg');
 }
 
-.win .info img {
-  width :250px;
-  height:250px;
-  border-radius: 10px;
+.win .main .logo{
+  margin-top: -50px;
+  width: 350px;
+  height: 350px;
+  background: url(../images/logo_transparent.png) no-repeat 0 0;
+  background-size: 100% 100%;
 }
 
-.win .info img + img{
-  margin-left: 20px;
+
+.win .main h1{
+  font-size : 40px;
+  font-weight: 400;
+  color : #dadada;
+  text-transform: uppercase;
+  letter-spacing: 6px;
 }
+
+.win .main p{
+  margin-top : 40px;
+  font-size : 14px;
+  letter-spacing: 0.5px;
+  color : #dadada;
+  font-weight: 300px;
+}
+
+.win .main .line{
+  margin-top : 40px;
+  width : 100px;
+  height : 3px;
+  background : #dadada;
+}
+
+.win .main .learnmore{
+  margin-top : 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width : 200px;
+  height: 50px;
+  border: 1px solid #dadada;
+  font-size : 18px;
+  color : #dadada;
+}
+
+.win .main .learnmore:hover {
+  color : black;
+}
+
+
+
+.win .main h1 {
+  color :white
+}
+
+
+/* info */
+#skills{
+  height: 850px;
+}
+.win .hi {
+  font-size: 45px;
+  font-weight: 500;
+  color: #dadada;
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.win .contents-wrapper {
+  height: 100%;
+}
+
+.win .contents-wrapper .info{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.win .contents-wrapper  .info > ul{
+  display: grid;
+  grid-template-columns: repeat(4, 250px);
+  grid-row-gap: 50px;
+  grid-column-gap: 50px;
+}
+
+.win  .info ul li{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 250px;
+  height: 250px;
+}
+
+.win  .info ul li p {
+  margin-top : 10px;
+  font-size: 20px;
+}
+
+.win .contents-wrapper .info > ul > li > img{
+  width: 150px;
+  height: 150px;
+}
+
+.win .contents-wrapper .info > ul > li > img:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  opacity: 0.5;
+}
+
+.win  .info ul li .progress_bar{
+  margin-top : 15px;
+  width : 80%;
+  height : 5px;
+  background-color: #dadada;
+}
+
+.win  .info ul li .progress_bar::-webkit-progress-bar {
+  background-color: #dadada;
+}  
+
+.win  .info ul li .progress_bar::-webkit-progress-value {  
+  background: #454545;
+} 
+
 
 
 
