--- a/css/index.css
+++ b/css/index.css
@@ -37,9 +37,12 @@
     margin-top: auto;
     margin-bottom: auto;
   }
+  .header_nevigation{
+    font-size: 18px;
+  }
 }
 
-@media (max-width:560px){
+/* @media (max-width:560px){
   .skills_info .skills_gallery li{
 
   }
@@ -48,4 +51,4 @@
   .skills_info .skills_gallery li{
 
   }
-}
+} */
