--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 .about {
-  height: 100vh;
+  height: auto;
 }
 
 .about h1 {
@@ -10,42 +10,47 @@
   text-align: center;
 }
 
+@media(max-width:768px){
+  .about h1{
+    font-size: 30px;
+  }  
+}
+
 .about_contents {
   margin: 0 auto;
   margin-top: 40px;
   padding: 40px 20px;
-  width: 80%;
-  height: 80%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  width: 80%;
   border: black 2px solid;
 }
 
 .about_contents_box {
-  width: 30%;
+  width: 300px;
 }
 
 .about_contents_box .photo_img {
   margin: 0 auto;
   margin-bottom: 30px;
   display: block;
-  width: 55%;
+  width: 80%;
   border-radius: 50%;
 }
 
 .about_contents_box.one {
+  margin-right : 15%;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
+.about_contents_box.one h3{
+  text-align: center;
+  font-size: 20px;
+}
 .about_contents_box .profile {
   margin-bottom: 10px;
-}
-
-.about_contents_box .profile h3 {
-  font-size: 20px;
-  text-align: center;
 }
 
 .about_contents_box .follow {
@@ -97,37 +102,46 @@
 }
 
 .about_contents_box.two {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  width :50%;
+  display: grid;
+  grid-template-columns: repeat(2, 300px);
+  grid-column-gap: 15%;
+  grid-row-gap: 60px;
 }
 
-.about_contents_box.two {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-.about_contents_box.two li + li {
-  margin-top: 40px;
-}
 
 .about_contents_box.two li h3 {
   margin-bottom: 10px;
   padding-bottom: 10px;
   display: block;
   color: black;
-  font-size: 25px;
+  font-size: 20px;
   border-bottom: 2px solid black;
 }
 
 .about_contents_box.two li p {
   font-family: "Gothic A1", sans-serif;
   color: #7b6851;
-  font-size: 15px;
+  font-size: 13px;
   line-height: 20px;
 }
 
 .about_contents_box.two li p + p {
   margin-top: 5px;
+}
+
+@media(max-width:768px){
+  .about_contents {
+   display: block;
+  }
+  .about_contents_box.one {
+    margin-right : 0;
+    margin : 0 auto;
+  }
+  .about_contents_box.two {
+    margin-right : 0;
+    grid-template-columns: repeat(1, 350px);
+
+  }
+  
 }
