--- a/css/skills.css
+++ b/css/skills.css
@@ -3,7 +3,6 @@
 .skills {
   margin-top: 40px;
   width: 100%;
-  height: 100vh;
 }
 
 .skills h1 {
@@ -12,6 +11,12 @@
   font-size: 45px;
   color: black;
   letter-spacing: 6px;
+}
+
+@media(max-width:768px){
+  .skills h1 {
+    font-size: 30px;
+  }
 }
 
 .skills_info {
@@ -28,6 +33,12 @@
   grid-column-gap: 50px;
 }
 
+@media(max-width:768px){
+  .skills_info > ul {
+    grid-template-columns: repeat(1, 250px);
+  }
+}
+
 .skills_info ul li {
   display: flex;
   flex-direction: column;
@@ -42,9 +53,22 @@
   color: #50586c;
 }
 
+@media(max-width:768px){
+  .skills_info ul li p {
+    font-size: 15px;
+  }
+}
+
 .skills_info > ul > li > img {
   width: 150px;
   height: 150px;
+}
+
+@media(max-width:768px){
+  .skills_info > ul > li > img {
+    width: 125px;
+    height: 125px;
+  }
 }
 
 .skills_info > ul > li > img:hover {
@@ -58,6 +82,12 @@
   width: 80%;
   height: 5px;
   background-color: #dadada;
+}
+
+@media(max-width:768px){
+  .skills_info ul li .progress_bar {
+    width: 60%;
+  }
 }
 
 .skills_info ul li .progress_bar::-webkit-progress-bar {
